# genshinwish

./: LICENSE  LICENSE.txt  README.md  pyproject.toml
src/: candidates.py  genshin_wish.py  genshinwish.py  setup.py
src/genshinwish.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test/: test.ipynb
